Adicionado de Tela inicial do Site e Responvidade

--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 	<title>Cadastro</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
@@ -12,7 +12,7 @@
 			<input type="email" name="email" placeholder="E-mail">
 			<input type="password" name="password" placeholder="Senha">
 			<button type="submit">Cadastrar</button>
-			<a href="index.html" class="back-link">Voltar</a>
+			<a href="/src/html/login.html" class="back-link">Voltar</a>
 		</form>
 	</div>
 </body>
