--- a/src/html/eletrod.html
+++ b/src/html/eletrod.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 	<title>Editar Eletrodomésticos</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
 </head>
 <body>
 	<div class="container">
-		<a  href="/src/html/index.html" class="back-button">Voltar</a>
+		<a  href="/src/html/perfil.html" class="back-button">Voltar</a>
 		<h1 class="titulo">Editar <br> Eletrodomésticos</h1>
 		<select class="dropdown">
 			<option value="">Selecione um item</option>
@@ -27,7 +27,7 @@
 			<p class="texto">Valor3</p>
 		</div>
 		<div class="buttons profile-buttons">
-			<a href="/src/html/index.html" class="btn"><i class="fa fa-perfil"></i></a>
+			<a href="/src/html/perfil.html" class="btn"><i class="fa fa-perfil"></i></a>
 			<a href="/src/html/gastos.html" class="btn"><i class="fa fa-gastos"></i></a>
 			<a href="/src/html/calendario.html" class="btn"><i class="fa fa-calendario"></i></a>
 			<a href="/src/html/previsao.html" class="btn"><i class="fa fa-previsao"></i></a>
