--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 	<title>Login</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
 </head>
 <body>
 	<div class="container">
+		<a  href="/src/html/home.html" class="back-button">Voltar</a>
 		<h1>Login</h1>
 		<form>
 			<input type="text" name="email" placeholder="Email">
