--- a/src/html/config.html
+++ b/src/html/config.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <title>Configurações</title>
     <link rel="stylesheet" href="/src/assets/css/style.css">
   </head>
   <body>
     <div class="container">
-        <a  href="/src/html/index.html" class="back-button">Voltar</a>
+        <a  href="/src/html/perfil.html" class="back-button">Voltar</a>
         <h1 class="title">Configurações</h1>
         <ul class="button-list">
             <li><button class="menu-button">Ajustar Tarifa</button></li>
