--- a/src/html/perfil.html
+++ b/src/html/perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 	<title>Perfil</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
@@ -17,7 +17,7 @@
 			<!-- Aqui você pode adicionar o gráfico -->
 		</div>
 		<div class="buttons profile-buttons">
-			<a href="/src/html/index.html" class="btnActive"><i class="fa fa-perfil"></i></a>
+			<a href="/src/html/perfil.html" class="btnActive"><i class="fa fa-perfil"></i></a>
 			<a href="/src/html/gastos.html" class="btn"><i class="fa fa-gastos"></i></a>
 			<a href="/src/html/calendario.html" class="btn"><i class="fa fa-calendario"></i></a>
 			<a href="/src/html/previsao.html" class="btn"><i class="fa fa-previsao"></i></a>
