--- a/src/html/previsao.html
+++ b/src/html/previsao.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 	<title>Previsão de Gastos</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
 </head>
 <body>
 	<div class="container">
-        <a  href="/src/html/index.html" class="back-button">Voltar</a>
+        <a  href="/src/html/perfil.html" class="back-button">Voltar</a>
 		<h1 class="title">Previsão de Gastos</h1>
 		<div class="circle-container">
 			<div class="circle">
@@ -24,7 +24,7 @@
 			</ul>
 		</div>
         <div class="buttons profile-buttons">
-			<a href="/src/html/index.html" class="btn"><i class="fa fa-perfil"></i></a>
+			<a href="/src/html/perfil.html" class="btn"><i class="fa fa-perfil"></i></a>
 			<a href="/src/html/gastos.html" class="btn"><i class="fa fa-gastos"></i></a>
 			<a href="/src/html/calendario.html" class="btn"><i class="fa fa-calendario"></i></a>
 			<a href="/src/html/previsao.html" class="btnActive"><i class="fa fa-previsao"></i></a>
