--- a/src/html/tarifa.html
+++ b/src/html/tarifa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <title>Ajustar Tarifa</title>
     <link rel="stylesheet" href="/src/assets/css/style.css">
@@ -7,7 +7,7 @@
   
 <body>
 	<div class="container">
-        <a  href="/src/html/index.html" class="back-button">Voltar</a>
+        <a  href="/src/html/perfil.html" class="back-button">Voltar</a>
 		<h1 class="titulo">Ajustar Tarifa</h1>
 		<h2 class="subtitulo">Companhia</h2>
 		<div class="retangulo">
