Ajustes nas configurações

--- a/src/html/gastos.html
+++ b/src/html/gastos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<meta charset="UTF-8"/>
 	<title>Gastos</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
 </head>
