--- a/src/html/config.html
+++ b/src/html/config.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <meta charset="UTF-8"/>
     <title>Configurações</title>
     <link rel="stylesheet" href="/src/assets/css/style.css">
   </head>
   <body>
     <div class="container">
-        <a  href="/src/html/perfil.html" class="back-button">Voltar</a>
+        <a href="/src/html/perfil.html" class="back-button">Voltar</a>
         <h1 class="title">Configurações</h1>
         <ul class="button-list">
-            <li><button class="menu-button">Ajustar Tarifa</button></li>
-            <li><button class="menu-button">Ajustar Limite Previsto</button></li>
-            <li><button class="menu-button">Alterar Nome</button></li>
-            <li><button class="menu-button">Alterar Email</button></li>
-            <li><button class="menu-button">Redefinir Senha</button></li>
-          </ul> 
+            <li><a href="/src/html/tarifa.html"class="menu-button">Ajustar Tarifa</a></li>
+            <li><a class="menu-button">Ajustar Limite Previsto</a></li>
+            <li><a href="/src/html/nome.html"  class="menu-button">Alterar Nome</a></li>
+            <li><a href="/src/html/email.html" class="menu-button">Alterar Email</a></li>
+            <li><a href="/src/html/senha.html" class="menu-button">Redefinir Senha</a></li>
+        </ul> 
     </div>           
   </body>
 </html>
