--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<meta charset="UTF-8"/>
 	<title>Login</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
 </head>
@@ -8,9 +9,9 @@
 	<div class="container">
 		<a  href="/src/html/home.html" class="back-button">Voltar</a>
 		<h1>Login</h1>
-		<form>
-			<input type="text" name="email" placeholder="Email">
-			<input type="password" name="password" placeholder="Senha">
+		<form action="\src\php\login.php" method="post">
+			<input type="text" name="login" placeholder="Email">
+			<input type="password" name="senha" placeholder="Senha">
 			<button type="submit">Entrar</button>
 		</form>
 		<div class="register-link"><a href="/src/html/cadastro.html">Cadastre-se</a></div>
