--- a/src/html/perfil.html
+++ b/src/html/perfil.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<meta charset="UTF-8"/>
 	<title>Perfil</title>
 	<link rel="stylesheet" href="/src/assets/css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="container">
-		<a class="fa gear-icon" href="/src/html/config.html" >&#xf013;</a>
-		<a class="Sair"  href="/src/html/login.html" >Sair</a>
+		<a class="fa gear-icon" href="/src/html/config.html">&#xf013;</a>
+		<a class="Sair" href="/src/html/login.html">Sair</a>
 		<h1>Perfil</h1>
 		<div class="profile-pic">
 			<!-- Aqui você pode adicionar a imagem do usuário -->
@@ -23,6 +24,7 @@
 			<a href="/src/html/previsao.html" class="btn"><i class="fa fa-previsao"></i></a>
 			<a href="/src/html/eletrod.html" class="btn"><i class="fa fa-eletro"></i></a>
 		</div>
+
 	</div>
 </body>
 </html>
