Correção de valores na tela previsao

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -11,7 +11,7 @@
         <h1 class="title">Configurações</h1>
         <ul class="button-list">
             <li><a href="/src/html/tarifa.html"class="menu-button">Ajustar Tarifa</a></li>
-            <li><a class="menu-button">Ajustar Limite Previsto</a></li>
+            <li><a href="/src/html/limite.html"class="menu-button">Ajustar Limite Previsto</a></li>
             <li><a href="/src/html/nome.html"  class="menu-button">Alterar Nome</a></li>
             <li><a href="/src/html/email.html" class="menu-button">Alterar Email</a></li>
             <li><a href="/src/html/senha.html" class="menu-button">Redefinir Senha</a></li>
