--- a/src/html/eletrod.html
+++ b/src/html/eletrod.html
@@ -7,8 +7,10 @@
   <style>
     input.texto {
       text-align: center;
-      background-color: #6B39B4;
-      color: white;
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
     }
 	button.white-button {
       background-color: white;
@@ -102,15 +104,15 @@
       <option value="">Selecione um item</option>
     </select>          
     <h2 class="subtitulo">Consumo (kWh)</h2>
-    <div class="retangulo consumo">
+    <div class="consumoeletrod">
       <input type="text" class="texto" id="consumo">
     </div>
-    <h2 class="subtitulo">Uso Por Mês (h)</h2>
-    <div class="retangulo horas">
+    <h2 class="subtituloeletrod">Uso Por Mês (h)</h2>
+    <div class="horas">
       <input type="text" class="texto" id="horas">
     </div>
     <h2 class="subtitulo">Quantidade</h2>
-    <div class="retangulo quantidade">
+    <div class="quantidadeeletrod">
       <input type="text" class="texto" id="quantidade">
     </div>
 	<br>
