--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -111,8 +111,8 @@ h1 {
 		<main class="content">
 			<div class="box">
 			<p>Bem-vindo ao nosso aplicativo de cálculo de energia elétrica! Nosso objetivo é ajudar você a entender melhor o seu consumo de energia e como isso impacta na sua conta de luz. Sabemos que é difícil controlar o consumo de cada eletrodoméstico e calcular quanto você vai gastar no final do mês. É aí que entramos!</p>
-			<p>Com nosso aplicativo, você pode cadastrar todos os seus eletrodomésticos e ver uma previsão de quanto vai gastar com base no consumo de cada um e no valor da tarifa da sua empresa de energia. Dessa forma, você pode tomar decisões mais conscientes sobre o uso da energia elétrica em sua casa e economizar na sua conta de luz.</p>
-            <p>Estamos comprometidos em fornecer a melhor experiência possível para nossos usuários e tornar a gestão da energia elétrica em sua casa mais fácil e eficiente. Não hesite em entrar em contato conosco se tiver alguma dúvida ou sugestão. Estamos sempre trabalhando para melhorar nosso aplicativo e torná-lo mais útil para você. Obrigado por escolher nosso aplicativo de cálculo de energia elétrica!</p>
+			<p>Com nosso aplicativo, você pode cadastrar todos os seus eletrodomésticos e ver uma previsão de quanto vai gastar com base no consumo de cada um e no valor da tarifa da sua companhia de energia. Dessa forma, você pode tomar decisões mais conscientes sobre o uso da energia elétrica em sua casa e economizar na sua conta de luz.</p>
+            <p>Estamos comprometidos em fornecer a melhor experiência possível para nossos usuários e tornar a gestão da energia elétrica em sua casa mais fácil e eficiente. Estamos sempre trabalhando para melhorar nosso aplicativo e torná-lo mais útil para você. Obrigado por escolher nosso aplicativo!</p>
             </div>
             </main>
             </div>
