--- a/src/html/config.html
+++ b/src/html/config.html
@@ -14,7 +14,7 @@
             <li><a href="/src/html/nome.html"  class="menu-button">Alterar Nome</a></li>
             <li><a href="/src/html/email.html" class="menu-button">Alterar Email</a></li>
             <li><a href="/src/html/senha.html" class="menu-button">Redefinir Senha</a></li>
-            <li><a href="/src/html/contas.html" class="menu-button">Editar Conta de Luz</a></li>
+            <li><a href="/src/html/contas.html" class="menu-button">Adicionar Conta de Luz</a></li>
         </ul> 
     </div>           
   </body>
