--- a/src/html/gastos.html
+++ b/src/html/gastos.html
@@ -90,7 +90,7 @@
 <body>
     <div class="container">
         <a href="/src/html/perfil.html" class="back-button">Voltar</a>
-        <h1 class="title">Gastos</h1>
+        <h1 class="title">Histórico de contas</h1>
         <div class="chart-container">
             <canvas id="myChart"></canvas>
         </div>
