--- a/src/html/contas.html
+++ b/src/html/contas.html
@@ -43,7 +43,7 @@ input[type="submit"] {
 <body>
     <div class="container">
         <a href="/src/html/config.html" class="back-button">Voltar</a>     
-        <h1>Editar Conta de Luz</h1>
+        <h1>Adicionar Conta de Luz</h1>
         <form method="POST" action="\src\php\contas.php">
             <label for="valor" class="valor-label">Valor:</label>
             <br>
